<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">L O C A L Y</string>
    <string name="action_settings">Settings</string>
    <string name="proceed">P R O C E E D</string>
    <string name="title_activity_main2">I N D E X</string>
    <string name="title_activity_main3">MOBILE PHONES</string>
    <string name="title_activity_main4">AUTOMOBILES</string>
    <string name="title_activity_main5">HOME APPLIANCES</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO1</string>
    <string name="chinese_brands1">Chinese Brands :</string>
    <string name="siac_motors_which_comprises_morris_garages_mg">SIAC Motors which comprises Morris Garages ( MG )</string>
    <string name="alternative_brands2">Alternative Brands :</string>
    <string name="tata_motors_mahindra_maruti_suzuki_force_motors">TATA Motors, Mahindra, Maruti Suzuki, Force Motors</string>
    <string name="todo2">TODO2</string>
    <string name="home_appliances">" HOME APPLIANCES "</string>
    <string name="chinese_brands3">Chinese Brands :</string>
    <string name="haier_lenevo_xiaomi">Haier, Lenevo, Xiaomi,</string>
    <string name="alternative_brands1" tools:ignore="DuplicateDefinition">Alternative Brands :</string>
    <string name="bosch_lg_seimens_samsung_sony">Bosch, LG, Seimens, Samsung, Sony</string>
    <string name="automobiles">"AUTOMOBILES "</string>
    <string name="index">INDEX</string>
    <string name="chinese_brands2">Chinese Brands :</string>
    <string name="xiaomi_oppo_vivo_one_plus_real_me_poco">Xiaomi, Oppo, Vivo, One Plus, Real me, POCO</string>
    <string name="alternative_brands">Alternative Brands :</string>
    <string name="apple_samsung_htc">Apple, Samsung, HTC</string>
    <string name="TODO">autom</string>
    <string name="mobile_phones">MOBILE PHONES</string>
    <string name="indian_alternatives">"INDIAN ALTERNATIVES "</string>
    <string name="to_chinese_brands">TO CHINESE BRANDS</string>
    <string name="title_activity_main6">FASHION</string>
    <string name="f_a_s_h_i_o_n">F A S H I O N</string>
    <string name="shein">Shein</string>
    <string name="ajio_myntra_hrx">Ajio, Myntra, HRX</string>
    <string name="todo6">TODO6</string>
    <string name="m_o_b_i_l_e_p_h_o_n_e_s">MOBILE PHONES</string>
    <string name="a_u_t_o_m_o_b_i_l_e_s">AUTOMBILES</string>
    <string name="h_o_m_e_a_p_p_l_i_a_n_c_e_s">HOME APPLIANCES</string>
    <string name="electicals">ELECTRICALS</string>
    <string name="furniture">FURNITURE</string>
    <string name="laptops">LAPTOPS</string>
    <string name="audio_systems">AUDIO SYSTEMS</string>
    <string name="action_cams">ACTION CAMERAS</string>
    <string name="video_surveillance">VIDEO SURVEILLANCE</string>
    <string name="title_activity_main7">ELECTRICALS</string>
    <string name="title_activity_main8">FURNITURE</string>
    <string name="title_activity_main9">LAPTOPS</string>
    <string name="title_activity_main10">AUDIO SYSTEMS</string>
    <string name="title_activity_main11">ACTION CAMERAS</string>
    <string name="title_activity_main12">VIDEO SURVEILLANCE</string>
    <string name="bhel_havells_india_bajaj_electrical">BHEL, Havells India, Bajaj Electrical</string>
    <string name="shanghai_electric_harbin_electric">Shanghai Electric, Harbin Electric</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="louvre_homegroup_quanu_qm_furniture">Louvre Homegroup, Quanu, QM Furniture</string>
    <string name="godrej_interio_usha_lexus_zuari_furnitures">Godrej Interio, Usha Lexus, Zuari Furnitures</string>
    <string name="lenovo_xiaomi_huawei">Lenovo, Xiaomi, Huawei</string>
    <string name="hcl_hp_asus_dell">HCL, HP, Asus, Dell</string>
    <string name="todo9">TODO</string>
    <string name="lts_acoustics_sanway_tonoch_guangzhao_baolun">LTS Acoustics, Sanway, Tonoch, Guangzhao Baolun</string>
    <string name="yamaha_bose_adamson_sony">Yamaha, Bose, Adamson, Sony</string>
    <string name="todo10">TODO</string>
    <string name="hikvision_dahua_tech">HikVision, Dahua Tech,</string>
    <string name="axis_avigilon_corp_fujifilm">Axis, Avigilon Corp, Fujifilm</string>
    <string name="todo12">TODO</string>
</resources>
