<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Main5Activity"
    tools:showIn="@layout/activity_main5">

    <EditText
        android:id="@+id/editText5"
        android:layout_width="408dp"
        android:layout_height="237dp"
        android:layout_marginTop="216dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/chinese_brands3"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="385dp"
        android:layout_height="66dp"
        android:text="@string/haier_lenevo_xiaomi"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="412dp"
        android:layout_height="249dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/alternative_brands"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.336"
        android:autofillHints="" tools:targetApi="o"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="386dp"
        android:layout_height="70dp"
        android:layout_marginTop="172dp"
        android:text="@string/bosch_lg_seimens_samsung_sony"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText6"
        app:layout_constraintVertical_bias="0.87" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="648dp"
        android:layout_height="285dp"
        android:contentDescription="@string/TODO"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/homeapp" />
</androidx.constraintlayout.widget.ConstraintLayout>